# ROS2_NodeWeaver

./: .gitignore  LICENSE  README.md  generated_script.py  main.py
temp/ccu/ccu/bautiro_developer_functions/: package.xml  setup.cfg  setup.py
temp/ccu/ccu/bautiro_developer_functions/doc/: bautiro_developer_functions.rst
temp/ccu/ccu/bautiro_developer_functions/test/: test_a_dev_func_fnc.py
temp/ccu/ccu/ccu_bt_tree_nodes/: CHANGELOG.rst  CMakeLists.txt  package.xml
temp/ccu/ccu/ccu_bt_tree_nodes/bt_xml/: bt_nodes.xml
temp/ccu/ccu/ccu_data_services/: CHANGELOG.rst  package.xml  readme.md  requirements.txt  setup copy.py  setup.cfg  setup.py
temp/ccu/ccu/ccu_data_services/ccu_data_services/: data_service.py  services.py  util_core.py  util_halc.py
temp/ccu/ccu/ccu_data_services/doc/: ccu_data_services.rst  ccu_data_services_context.puml  mds_services_core.puml  mds_services_halc.puml
temp/ccu/ccu/ccu_data_services/launch/: debug.launch.py  normal.launch.py
temp/ccu/ccu/ccu_data_services/resource/: 90-allow-sudo-group-udisk-wo-password.pkla
temp/ccu/ccu/ccu_dataservice/: package.xml  readme.md  requirements.txt  setup.py
temp/ccu/ccu/ccu_dataservice/doc/: ccu_dataservice.rst  ccu_dataservice_class_diagramm.puml  ccu_dataservice_concept_mission_data_and_folder.rst  ccu_dataservice_context.puml  ccu_dataservice_dependencies.puml  ccu_dataservice_folders.puml  ccu_dataservice_usb_sudo_mount_issue.md
temp/ccu/ccu/ccu_dataservice/tests/: test_conf.py  test_conv.py  test_core.py  test_halc_ds.py  test_loader.py  test_validator.py
temp/ccu/ccu/ccu_hcu_abstraction/: CHANGELOG.rst  package.xml  readme.md  requirements.txt  setup.cfg  setup.py
temp/ccu/ccu/ccu_hcu_abstraction/ccu_hcu_abstraction/: halc.py
temp/ccu/ccu/ccu_hcu_abstraction/config/: categories.yaml  ccu_skills.yaml  drill.yaml  fpm_skills.yaml  lift.yaml  lu.yaml  rpm.yaml
temp/ccu/ccu/ccu_hcu_abstraction/doc/: ccu_hcu_abstraction.rst  ccu_hcu_abstraction_class_diagram.puml  ccu_hcu_abstraction_class_diagram.rst  ccu_hcu_abstraction_component_diagram.puml  ccu_hcu_abstraction_context.puml  ccu_hcu_abstraction_overview.rst  (+1 more)
temp/ccu/ccu/ccu_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
temp/ccu/ccu/ccu_test/: package.xml  setup.cfg  setup.py
temp/common/bautiro/ament_btr_cmake/: CMakeLists.txt  ament_btr_cmake-extras.cmake  package.xml
temp/common/bautiro/bautiro_bringup/: CHANGELOG.rst  CMakeLists.txt  README.MD  package.xml
temp/common/bautiro/bautiro_description/: CHANGELOG.rst  CMakeLists.txt  README.MD  package.xml
temp/common/bautiro/bautiro_gazebo_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
temp/common/bautiro/bautiro_launch/: README.md  package.xml  setup.cfg  setup.py
temp/common/bautiro/bautiro_ros_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
temp/common/btr_system_tests/: .gitignore  CMakeLists.txt  README.md  package.xml
temp/common/btr_system_tests/src/: CMakeLists.txt
temp/common/leica_simulation/leica_ign_gz_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
temp/fpm/fpm/fpm_bringup/: CHANGELOG.rst  CMakeLists.txt  README.MD  package.xml
temp/fpm/fpm/fpm_ceiling_distance/: CMakeLists.txt  package.xml
temp/fpm/lu_driver_ts16/: .gitignore  README.md  package.xml  setup.cfg  setup.py
temp/fpm/lu_driver_ts16/config/: answers.yaml  commands.yaml  message_fields.yaml  readme.yaml
temp/fpm/lu_driver_ts16/launch/: rs232_driver.py
temp/fpm/lu_driver_ts16/ts16/: driver.py  playback_interface.py  process_ros_parameters.py  serial_interface.py
temp/fpm/lu_fine_localization/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  TESTING_fine_localization_service.md  package.xml
temp/fpm/lu_fine_localization/config/: Bosch_Le_131_Festpunkte_FromCloud.asc  Bosch_Le_131_Festpunkte_LeicaScan copy.asc  Bosch_Le_131_Festpunkte_LeicaScan.asc  Bosch_Le_131_Festpunkte_SLAM-MappingRun.asc  Bosch_Lr_70_Festpunkte.asc  Bosch_Lr_70_Festpunkte.ods  Bosch_Sh_1.asc
temp/fpm/lu_fine_localization/doc/: index.rst  overview_sw_package.md
temp/fpm/lu_fine_localization/launch/: bringup_fine_sensors_launch.py
temp/fpm/lu_fine_localization/lu_fine_localization/: fine_loc_coordination.py  fine_loc_coordination_fus1.py  fine_loc_coordination_wo_hw.py  fine_loc_coordination_wo_robotarm.py  fine_localization_service.py  move_ts16_services.py  pose_rigid_body.py  slam_mockup.py  tf2_reflex_marker_broadcaster.py
temp/fpm/lu_fine_localization/scripts/: bringup_test_environment.sh  robot_goto_0.sh  robot_goto_4.sh  robot_goto_absolute.sh
temp/fpm/lu_fine_localization/srv/: LuFineLocalization.srv
temp/rpm/lu_map_create/: .gitignore  CONTRIBUTING.md  README.md  ROKIT_Locator.md  ROKIT_Locator_Record_LIDARScan.md  ROKIT_Locator_Simulate_LIDARScan.md  package.xml  pcd_publisher_for_nav2.md  setup.cfg  setup.py
temp/rpm/lu_map_create/lu_map_create/: laser_scan_parameters.py  pcd_publisher_for_nav2.py  pcd_publisher_for_rokit_node.py  pcd_publisher_for_rokit_simulate_lidar_node.py  pcd_publisher_node.py
temp/rpm/lu_map_create/rviz/: config.rviz
temp/rpm/lu_map_create/scripts/: map_create.m  map_create.py  run_dev.sh
temp/rpm/lu_rough_localization/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
temp/rpm/lu_rough_localization/config/: fus1_bautiro_sim.yaml  fus1_demo_Le131.rviz  fus1_slam_general.yaml  fus1_slam_general_sim.yaml  fus1_slam_lidar.yaml  fus1_slam_lidar_sim.yaml  old_launch_bautiro.yaml  old_launch_bautiro_vlp16.yaml
temp/rpm/lu_rough_localization/launch/: localization_launch.py  localization_static_urdf_launch.py
temp/rpm/lu_rough_localization/lu_rough_localization/: point_cloud2.py  process_ros_parameters.py  slam_launch_helper.py
temp/rpm/lu_rough_localization/maps/: CMakeLists.txt  README.md
temp/rpm/lu_rough_localization/scripts/: download_maps.sh  filter_spatial_outliers.py  filter_temporal_outliers.py  filter_temporal_spatial_outliers.py  manipulate_yaml.py  slam_mockup.py  test_with_static_robot_description_for_docker.sh  transform_services.py
temp/rpm/lu_rough_localization/test/: CMakeLists.txt
(+965 files in other folders)
