<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>btr_system_tests</name>
  <version>0.0.0</version>
  <description>BAUTIRO system tests.</description>
  <maintainer email="musamorena.marcussomanhaes@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <license>Robert Bosch GmbH proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_btr_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>