<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ts16</name>
  <version>0.0.0</version>
  <description>Leica TS16 driver</description>
  <maintainer email="erz2lr@todo.todo">erz2lr</maintainer>
  <license>TODO: License declaration</license>
  
  <build_depend>bautiro_ros_interfaces</build_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>bautiro_ros_interfaces</exec_depend>

  <!-- <test_depend>ament_copyright</test_depend>  -->
  <!-- <test_depend>ament_flake8</test_depend>  -->
  <!-- <test_depend>ament_pep257</test_depend>  -->
  <!-- <test_depend>python3-pytest</test_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
