<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lu_fine_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael.erz@de.bosch.com">Michael Erz</maintainer>
  <license>Copyright (c) Robert Bosch GmbH. All rights reserved.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->

  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>bautiro_ros_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <build_type>ament_python</build_type> -->
  </export>

</package>
