<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lu_map_create</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael.erz@de.bosch.com">Michael Erz (CR/AAS5)</maintainer>
  <license>TODO: License declaration</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
