<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lu_rough_localization</name>
  <version>0.0.0</version>
  <description>Rough localization for TOP100 BAUTIRO</description>
  <maintainer email="michael.erz@de.bosch.com">Michael Erz (CR/AAS5)</maintainer>
  <license>Copyright (c) Robert Bosch GmbH. All rights reserved.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>curl</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>slam_launch</exec_depend>
  <exec_depend>slam_control</exec_depend>
  <exec_depend>bautiro_ros_interfaces</exec_depend>
  <exec_depend>slam_launch</exec_depend>

  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>bautiro_description</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
