<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ccu_bt_tree_nodes</name>
  <version>0.0.0</version>
  <description>Fake Navigation Localization</description>
  <maintainer email="ahmadwaleed.abouelainein@bcn.bosch.com">root</maintainer>
  <license>Copyright (c) Robert Bosch GmbH. All rights reserved.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>std_srvs</build_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>bautiro_ros_interfaces</depend>
  <!-- <depend>fpm_tree_nodes</depend> -->
  <depend>fpm_bt_tree_nodes</depend>
  <depend>nav2_behavior_tree</depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>nav2_common</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
