<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ccu_dataservice</name>
  <version>2.1.0</version>
  <description>CCU Data-Service - core implementation.</description>
  <maintainer email="Georg.Schumacher@de.bosch.com">sg82fe</maintainer>
  <license>Copyright (c) Robert Bosch GmbH. All rights reserved.</license>

  <depend>ccu_bautiro</depend>
  <depend>python3-pyecore-pip</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
