<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ccu_test</name>
  <version>2.1.0</version>
  <description>Contains Fake Backends and launch files for testing.</description>
  <maintainer email="Georg.Schumacher@de.bosch.com">sg82fe</maintainer>
  <license>Copyright (c) Robert Bosch GmbH. All rights reserved.</license>

  <depend>ccu_data_services</depend>
  <depend>ccu_hcu_abstraction</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
