<?xml version="1.0"?>
<package format="3">
  <name>bautiro_description</name>
  <version>0.0.0</version>
  <description>Description of the entire bautiro robot, merges all module description </description>
  <maintainer email="andreas.mogck@de.bosch.com">mia4si</maintainer>
  <license>Robert Bosch GmbH proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_btr_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>imu_description</depend>
  <depend>ouster_description</depend>
  <depend>inclinometer_description</depend>
  <depend>velodyne_description</depend>
  <depend>realsense2_description</depend>
  <depend>urdfdom</depend>
  <depend>fpm_control</depend>
  <depend>ur_description</depend>


  <!-- FIXME: Add all packages referenced in the launch files as exec_depend -->
  <!-- FIXME: Add all packages referenced in the URDF files as exec_depend -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_bringup</exec_depend>
  <exec_depend>python3-lxml</exec_depend>

  <test_depend>bosch_copyright_extension</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_pycodestyle</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
