<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fpm_bringup</name>
  <version>0.0.0</version>
  <description>Package to bring up the fine positioning module</description>
  <maintainer email="QuangHuy.Nguyen2@de.bosch.com">ngq3fe</maintainer>
  <license>Robert Bosch GmbH proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_btr_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
