<?xml version="1.0"?>
<package format="3">
  <name>fpm_ceiling_distance</name>
  <version>0.0.0</version>
  <description>Packages calculates distance to the ceiling based on lidar measurements.</description>
  <maintainer email="damian.krata@pl.bosch.com">krd5wz</maintainer>
  <license>Robert Bosch GmbH proprietary</license>

  <depend>bosch_copyright_extension</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_btr_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>bautiro_ros_interfaces</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>bosch_copyright_extension</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
